--- a/Contactos.html
+++ b/Contactos.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/mobil.css" media="(max-width:600px)">
+  <link rel="stylesheet" href="/css/tablet.css" media="(max-width:768px)">
+  <link rel="stylesheet" href="/css/portatil.css" media="(max-width:992px)">
+  <link rel="stylesheet" href="/css/tv.css" media="(max-width:1200px)">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <title>Contactos</title>
+  <title>Inicio</title>
 </head>
 <body>
   <main>
